<resources>
    <string name="app_name">BusMapSV</string>
    <string name="prefs_file">BusMapSV_prefs"</string>
    <string name="default_web_client_id">693700987504-072879bm0140ihk22th40e43gga8a3qi.apps.googleusercontent.com</string>
    <string name="buscar">Buscar</string>
    <string name="description">Description</string>
    <string name="tarifa">Tarifa</string>
    <string name="tiempo">Tiempo</string>
    <string name="route_name">Route Name</string>
    <string name="location_icon" />
    <string name="money_icon" />
    <string name="inicio">Inicio</string>
    <string name="textview">TextView</string>
    <string name="fin">Fin</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Inicio">Inicio</string>
    <string name="hacerse_premium">Hacerse premium</string>
    <string name="sombre_nosotros">Sombre Nosotros</string>
    <string name="busmap_sv">BusMap Sv</string>
    <string name="haz_que_cada_viaje_valga_la_pena">Haz que cada viaje valga la pena</string>
</resources>