<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:srcCompat="@drawable/nombre" />

    <!-- CardView que envuelve el WebView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"

        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintWidth_percent="0.9">

        <WebView
            android:id="@+id/urlMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />
    </androidx.cardview.widget.CardView>

    <!-- CardView que envuelve los elementos de texto -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewMap"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary99"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="30dp"
                        android:layout_height="34dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/circle_start" />


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/circle_end" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="Inicio"
                        android:textColor="#C5C7C9" />

                    <TextView
                        android:id="@+id/textStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="TextView"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="23dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="27dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <View
                            android:id="@+id/view6"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:background="@color/dark_gray" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="23dp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="Fin"
                        android:textColor="#C5C7C9" />

                    <TextView
                        android:id="@+id/textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="TextView"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="139dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bus_icon" />

                <TextView
                    android:id="@+id/routeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:text="@string/route_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/routeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="#31363F"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/money_icon"
                    app:srcCompat="@drawable/money" />

                <TextView
                    android:id="@+id/routeTarifa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tarifa"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/location_icon"
                    app:srcCompat="@drawable/location" />

                <TextView
                    android:id="@+id/routeTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tiempo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>